--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ padding-top: 0;
     <section class="hero d-flex">
       <div class="container hero-content">
         <h1 class="display-4 fw-bold">
-          Innovating with Geospatial Intelligence & Data Analytics
+          Innovating with Geospatial Intelligence <br>& Data Analytics
         </h1>
         <p class="lead">
           Empowering smarter decisions through mapping, technology, and data
@@ -401,11 +401,18 @@ padding-top: 0;
 <section class="py-5 bg-white" id="works">
   <div class="container text-center  out-sec">
     <h2>How It Works</h2>
+
     <div class="row mt-4">
-      <div class="col-md-3"><div class="p-4 shadow rounded-lg  inner-1"><i class="bi bi-search fs-1 text-primary"></i><h5 class="mt-3">Research</h5><p>Understanding client needs & objectives.</p></div></div>
-      <div class="col-md-3"><div class="p-4 shadow rounded-lg  inner-1"><i class="bi bi-gear fs-1 text-success"></i><h5 class="mt-3">Process</h5><p>Applying GIS & data workflows efficiently.</p></div></div>
-      <div class="col-md-3"><div class="p-4 shadow rounded-lg  inner-1"><i class="bi bi-bar-chart fs-1 text-warning"></i><h5 class="mt-3">Analysis</h5><p>Turning data into actionable insights.</p></div></div>
-      <div class="col-md-3"><div class="p-4 shadow rounded-lg  inner-1"><i class="bi bi-check2-circle fs-1 text-danger"></i><h5 class="mt-3">Delivery</h5><p>Providing high-quality reports & solutions.</p></div></div>
+      <div class="col-md-3 "><div class="p-2 shadow rounded-lg  inner-1">
+        <i class="bi bi-search fs-1 text-primary"></i>
+        <h5 class="mt-4">Research</h5>
+        <p>Understanding client needs & objectives.</p>
+      </div>
+    </div>
+
+      <div class="col-md-3"><div class="p-2 shadow rounded-lg  inner-1"><i class="bi bi-gear fs-1 text-success"></i><h5 class="mt-4">Process</h5><p>Applying GIS & data workflows efficiently.</p></div></div>
+      <div class="col-md-3"><div class="p-2 shadow rounded-lg  inner-1"><i class="bi bi-bar-chart fs-1 text-warning"></i><h5 class="mt-4">Analysis</h5><p>Turning data into actionable insights.</p></div></div>
+      <div class="col-md-3"><div class="p-2 shadow rounded-lg  inner-1"><i class="bi bi-check2-circle fs-1 text-danger"></i><h5 class="mt-4">Delivery</h5><p>Providing high-quality reports & solutions.</p></div></div>
     </div>
   </div>
 </section>
