remove mobile number

--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@ ftr">
           <p class="mb-1"><b>Address: </b>Brola, Sector - 49, Noida, Uttar Pradesh, India, Pin Code- 201301.</p>
           <p class="mb-1"><b>Email: </b>inzachsolutions@gmail.com</p>
           <p class="mb-1"><b>Linkedin: </b><a href="https://www.linkedin.com/in/inzach-solutions-243a06347/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Join here</a></p>
-          <p><b>Phone: </b>+91-7895184496, +91-9027485758.</p>
+          <p><b>Phone: </b> +91 9027485758.</p>
         </div>
       </div>
 
